<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Inventory Management</string>
    <string name="action_settings">Settings</string>
    <string name="action_print">Print</string>
    <string name="action_help">Help</string>
    <string name="action_main">Main Menu</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_view_edit">ViewEditActivity</string>
    <string name="title_activity_inventory">InventoryActivity</string>


    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="button_text"><font size="125">First line!</font>\n\<font size="15">Second line!</font></string>
    <string name="search_hint">Search...</string>


    <string name="AddItemText">From the main menu, select the \'Add Inventory Item\' button.
        In the resulting screen, fill in all displayed fields. These fields include:
        Serial Number, Item Name, Category, Model, Condition, and Location. Please refer to the help
        topic on Item Conditions to select the correct condition of the equipment. Once complete,
        click the \'Add\' button to add the item.</string>
    <string name="EditItemText">From the main menu, choose either \'View Current Inventory\' or
        click the magnifying glass to perform a search for the desired item.  Once it is found from
        either page, click the item to open the \'Edit/Remove Item\' page.  All fields will be
        populated with the current information.  Click the \'Edit\' button, and then tap
        on the desired field(s) and make changes as needed.  Once complete press \'Save\' to save
        all changes.  If a mistake was made, press \'Cancel\' to discard changes.</string>
    <string name="RemoveItemText">From the main menu, choose either \'View Current Inventory\' or
        click the magnifying glass to perform a search for the desired item.  Once it is found from
        either page, click the item to open the \'Edit/Remove Item\' page. Click the \'Remove\'
        button, and select \'Yes\' from the following prompt to remove the item. </string>
    <string name="ItemConditionText">When choosing the condition of equipment please note the
        following: \n\nExcellent - New or like new (no appearance of wear) \n\nGood - Minimal wear
        \n\nFair - Showing signs of wear and/or minor missing components \n\nPoor - Excessive wear,
        broken, and/or major missing components</string>
    <string name="GenerateReportText">From the main menu, select the \'Generate Report\' button.
        In the resulting screen, select the desired report from the dropdown menu. In the upper
        right hand corner, click the top right button that looks like a box with an arrow to export
        the file.  From the resulting screen, a user may log into a Google account to print, save,
        email, or share the report.</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, sapien etiam, nunc amet dolor ac odio mauris
        justo.</string>
    <string name="BarcodeScan">The barcode scanning feature may be used to add a new item or edit
        an existing item.  To use this feature, from the main menu, select the \'Barcode Scanner\'
        button.  In the resulting screen, select the scan button to open the scanning feature.  A
        red flashing line will appear on the screen.  Position the red line to cross perpendicularly
        over the barcode to be scanned.  Once the device recognizes the barcode, either the \'Add
        Item\' or the \'Edit/Remove Item\' screen will appear.\n\nIn the case of adding an item, the
        add screen will have the serial number populated by the value of the scanned barcode.  Refer
        to the help topic on adding an item to finish adding the new item.\n\nIn the case of editing
        or removing an item, all fields will be populated by the values currently stored in the
        database. Refer to the help topic on editing an item to finish working with the item.
        </string>

    <string-array name="report_array">
        <item></item>
        <item>Category Report</item>
        <item>Condition Report</item>
        <item>Inventory Report</item>
        <item>Item Name Report</item>
        <item>Location Report</item>
    </string-array>

    <string-array name="add_array">
        <item>Excellent</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>


</resources>
