<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:theme="@style/AppTheme"
    android:background="@color/ColorPrimaryDark">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar">
    </include>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width = "fill_parent"
        android:layout_height = "fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity"
        android:background="@color/ColorPrimaryDark"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic1"
            android:text="Adding an Item"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/AddItemText"
            android:id="@+id/Help1"
            android:textColor="#9f9f9f"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/HintTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic2"
            android:text="Editing an Item"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/EditItemText"
            android:id="@+id/Help2"
            android:textColor="#9f9f9f"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/HintTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic3"
            android:text="Removing an Item"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/RemoveItemText"
            android:id="@+id/Help3"
            android:textColor="#9f9f9f"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/HintTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic4"
            android:text="Item Conditions"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/ItemConditionText"
            android:id="@+id/Help4"
            android:textColor="#9f9f9f"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/HintTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic5"
            android:text="Scanning a Label"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/BarcodeScan"
            android:id="@+id/Help5"
            android:textColor="#9f9f9f"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/HintTextColor"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/HelpTopic7"
            android:text="Generating and E-mailing a Report"
            android:textColor="@color/ColorPrimaryTextColor"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/GenerateReportText"
            android:id="@+id/Help7"
            android:textColor="#9f9f9f"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</RelativeLayout>
